flickering fixed

--- a/src/app/service-desk/services/services.component.scss
+++ b/src/app/service-desk/services/services.component.scss
@@ -83,10 +83,7 @@ section {
 .content:focus,
 .content:active {
   --color: rgba(0, 98, 255, 0.88);
-  -webkit-transform: translateX(1.7rem) translateY(.5rem);
   transform: translateX(1.7rem) translateY(.5rem);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
   opacity: 99;
   cursor: pointer;
   z-index: 3;
@@ -106,4 +103,27 @@ section {
 .content:nth-child(even):focus,
 .content:nth-child(even):active {
   transform: translateX(-1.7rem) translateY(.5rem);
+
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 106%;
+    bottom: -.1rem;
+    right: -1.7rem;
+  }
+}
+
+
+.content:nth-child(odd):hover,
+.content:nth-child(odd):focus,
+.content:nth-child(odd):active {
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 106%;
+    bottom: -.1rem;
+    left: -1.7rem;
+  }
 }
